moved copy button, fixed clipboard-read issue with safari

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <form id="scan_form">
             <div id="reader" class="row tt empty-reader-padding align-self-center" data-bs-placement="bottom" data-bs-original-title="" style="text-align: center;">
             <div id="controls">
-              <input type="file" id="input-file" accept="image/*" class="d-none" >
+              <input type="file" id="input-file" accept="image/*" class="d-none animate__animated animate__fadeIn" >
               <input type="button" id="upload-button" class = "btn btn-secondary btn-sm" value="Upload" onclick="document.getElementById('input-file').click();"/>
               <div id="paste-button" class="btn btn-secondary btn-sm tt" onclick="pasteImage();" data-bs-placement="right" data-bs-original-title=""><span id="paste-button-label">Paste</span></div>
 
