added example images

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="The free, fast, and easy way to scan QR codes and barcodes online! No app required. Paste or upload a barcode image to read it instantly. Barcode reader supports QR code, UPC A, UPC E, EAN 8, EAN 13, Code 39, Code 93, Code 128, ITF, PDF 417, Aztec Code, Data Matrix, RSS 14, RSS Expanded, and MaxiCode.">
+    <meta name="description" content="The free, fast, and easy way to scan QR codes and barcodes online! No app required. Paste or upload a barcode image to read it instantly. Barcode reader supports QR Code, Code 128, Code 39, PDF 417, EAN 8, EAN 13, ITF, Aztec Code, Data Matrix, and RSS 14.">
+
     <meta name="author" content="">
     <!-- CSS only -->
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
@@ -54,61 +55,7 @@
       <div class="row row-of-cards g-3">
         <div class="col">
         <div class="card">
-          <img src="https://via.placeholder.com/150" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h6 class="card-title">UPC A</h6>
-          </div>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card">
-          <img src="https://via.placeholder.com/150" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h6 class="card-title">UPC E</h6>
-          </div>
-        </div>
-      </div>
-      </div>
-      <div class="row row-of-cards g-3">
-        <div class="col">
-        <div class="card">
-          <img src="https://via.placeholder.com/150" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h6 class="card-title">EAN 8</h6>
-          </div>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card">
-          <img src="https://via.placeholder.com/150" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h6 class="card-title">EAN 13</h6>
-          </div>
-        </div>
-      </div>
-      </div>
-      <div class="row row-of-cards g-3">
-        <div class="col">
-        <div class="card">
-          <img src="https://via.placeholder.com/150" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h6 class="card-title">Code 39</h6>
-          </div>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card">
-          <img src="https://via.placeholder.com/150" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h6 class="card-title">Code 93</h6>
-          </div>
-        </div>
-      </div>
-      </div>
-      <div class="row row-of-cards g-3">
-        <div class="col gy-3">
-        <div class="card">
-          <img src="https://via.placeholder.com/150" class="card-img-top" alt="...">
+          <img src="/Images/Code-128.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h6 class="card-title">Code 128</h6>
           </div>
@@ -116,9 +63,9 @@
       </div>
       <div class="col">
         <div class="card">
-          <img src="https://via.placeholder.com/150" class="card-img-top" alt="...">
+          <img src="/Images/Code-39.png" class="card-img-top" alt="...">
           <div class="card-body">
-            <h6 class="card-title">ITF</h6>
+            <h6 class="card-title">Code 39</h6>
           </div>
         </div>
       </div>
@@ -126,7 +73,7 @@
       <div class="row row-of-cards g-3">
         <div class="col">
         <div class="card">
-          <img src="https://via.placeholder.com/150" class="card-img-top" alt="...">
+          <img src="/Images/PDF-417.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h6 class="card-title">PDF 417</h6>
           </div>
@@ -134,9 +81,9 @@
       </div>
       <div class="col">
         <div class="card">
-          <img src="https://via.placeholder.com/150" class="card-img-top" alt="...">
+          <img src="/Images/QR Code.png" class="card-img-top" alt="...">
           <div class="card-body">
-            <h6 class="card-title">Aztec Code</h6>
+            <h6 class="card-title">QR Code</h6>
           </div>
         </div>
       </div>
@@ -144,7 +91,43 @@
       <div class="row row-of-cards g-3">
         <div class="col">
         <div class="card">
-          <img src="https://via.placeholder.com/150" class="card-img-top" alt="...">
+          <img src="/Images/EAN-8.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h6 class="card-title">EAN 8</h6>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card">
+          <img src="/Images/EAN-13.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h6 class="card-title">EAN 13</h6>
+          </div>
+        </div>
+      </div>
+      </div>
+      <div class="row row-of-cards g-3">
+        <div class="col gy-3">
+        <div class="card">
+          <img src="/Images/ITF.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h6 class="card-title">ITF</h6>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card">
+          <img src="/Images/Aztec.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h6 class="card-title">AZTEC Code</h6>
+          </div>
+        </div>
+      </div>
+      </div>
+      <div class="row row-of-cards g-3">
+        <div class="col">
+        <div class="card">
+          <img src="/Images/DataMatrix.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h6 class="card-title">Data Matrix</h6>
           </div>
@@ -152,37 +135,9 @@
       </div>
       <div class="col">
         <div class="card">
-          <img src="https://via.placeholder.com/150" class="card-img-top" alt="...">
+          <img src="/Images/RSS14.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h6 class="card-title">RSS 14</h6>
-          </div>
-        </div>
-      </div>
-      </div>
-      <div class="row row-of-cards g-3">
-        <div class="col">
-        <div class="card">
-          <img src="https://via.placeholder.com/150" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h6 class="card-title">RSS Expanded</h6>
-          </div>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card">
-          <img src="https://via.placeholder.com/150" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h6 class="card-title">MaxiCode</h6>
-          </div>
-        </div>
-      </div>
-      </div>
-      <div class="row row-of-cards g-3">
-        <div class="col">
-        <div class="card">
-          <img src="https://via.placeholder.com/150" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h6 class="card-title">QR Code</h6>
           </div>
         </div>
       </div>
