--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
     <link href="styles.css" rel="stylesheet">
 
   </head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-M71E8LSK86"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-M71E8LSK86');
+  </script>
 <body>
     <main role="main" class="container">
       <div class="row" id="main-row">
