--- a/index.html
+++ b/index.html
@@ -4,8 +4,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="The free, fast, and easy way to scan QR codes and barcodes online! No app required. Paste or upload a barcode image to read it instantly. Barcode reader supports UPC A, UPC E, Code 128, Code 39, PDF 417, EAN 8, EAN 13, QR Code, ITF, Aztec Code, Data Matrix, and RSS 14.">
-
     <meta name="author" content="">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/Favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/Favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/Favicons/favicon-16x16.png">
+    <link rel="manifest" href="/Favicons/site.webmanifest">
+    <link rel="mask-icon" href="/Favicons/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+
     <!-- CSS only -->
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
